src/objects/Contract_Product__c.object
<CustomObject>
    <fields>
        <fullName>Actual_Quantity__c</fullName>
        <label>Actual Quantity</label>
        <summarizedField>FS_Monthly_Claimed_Cases__c.FS_Claimed_Cases_Paid__c</summarizedField>
        <summaryForeignKey>FS_Monthly_Claimed_Cases__c.Contract_Product__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contract</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Contract Products</relationshipLabel>
        <relationshipName>Contract_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Forecast_Quantity__c</fullName>
        <description>Forecast Quantity from Claimed Cases actuals</description>
        <inlineHelpText>Forecast Quantity from Claimed Cases actuals</inlineHelpText>
        <label>Forecast Quantity</label>
        <summarizedField>FS_Monthly_Claimed_Cases__c.FS_Forecast_Quantity__c</summarizedField>
        <summaryForeignKey>FS_Monthly_Claimed_Cases__c.Contract_Product__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Planned_Quantity__c</fullName>
        <description>Planned Quantity (SSD)</description>
        <inlineHelpText>Planned Quantity (SSD)</inlineHelpText>
        <label>Planned Quantity</label>
        <summarizedField>FS_Monthly_Claimed_Cases__c.FS_Planned_Quantity__c</summarizedField>
        <summaryForeignKey>FS_Monthly_Claimed_Cases__c.Contract_Product__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Contract Products</relationshipLabel>
        <relationshipName>Contract_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Contract Product</label>
    <nameField>
        <label>Contract Product Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Contract Products</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>